# cphsoft

./: .gitignore
dbd/assignment/: docker-compose.yml
dbd/assignment/migrations/: 20210305224908_caretaker.sql
dbd/assignment05/twitter_clone/: .project  README.md  docker-compose.db.yml  pom.xml
dbd/extra/: dbd_questions
dbd/extra/exam_project_theorizing/: plan.txt
dbd/extra/mongo/: README.md  docker-compose.yml  pyproject.toml
dbd/extra/redis_teaching_demonstration/: docker-compose.yml  readme.md
dbd/extra/redis_teaching_demonstration/redis_teaching_demo/: .env.development  dockerfile  pyproject.toml  requirements.txt
dbd/extra/redis_teaching_demonstration/redis_teaching_demo/src/: main.py
dbd/extra/redis_teaching_demonstration/redis_teaching_demo/src/logic/: redis_interactions.py
dbd/extra/redis_teaching_demonstration/redis_teaching_demo/src/misc/: environment.py
dbd/extra/redis_teaching_demonstration/redis_teaching_demo/tests/: test_redis_teaching_demo.py
dbd/pg/: Cargo.toml  docker-compose.yml
dbd/uge05/assignment/: .env  .env.prod  Cargo.toml  README.md  README.txt  docker-compose.prod.yml  docker-compose.rust.yml  docker-compose.yml  dockerfile  note.txt  sleep_run.sh  todo.txt
dbd/uge05/assignment/data/redis/: appendonly.aof
dbd/uge05/assignment/migrations/: 20210220162531_users.sql  20210305224909_caretaker.sql  20210305224919_city.sql  20210305224926_vet.sql  20210305224931_pet.sql  20210305224939_cat.sql  20210305224946_dog.sql  20210310204606_caretaker_pet.sql
dbd/uge05/assignment/src/: main.rs
dbd/uge05/assignment/src/connection/: conn.rs
dbd/uge05/assignment/src/entities/: caretaker.rs  cat.rs  city.rs  dog.rs  entity_utils.rs  mod.rs  pet.rs  vet.rs
dbd/uge05/assignment/src/entities/account/: user.rs
dbd/uge05/assignment/src/logic/handlers/: caretaker_handler.rs  cat_handler.rs  city_handler.rs  dog_handler.rs  misc_handler.rs  mod.rs  pet_handler.rs  user_handler.rs  vet_handler.rs
dbd/uge05/assignment/src/misc/: mod.rs  pop.sql  redis_interactions.rs  sql_interactions.rs  usr.sql
dbd/uge05/assignment/src/service/api/: caretaker.rs  cat.rs  city.rs  dog.rs  misc.rs  mod.rs  pet.rs  user.rs  vet.rs
dbd/uge05/assignment/src/service/routes/: caretaker_routes.rs  cat_routes.rs  city_routes.rs  dog_routes.rs  misc_routes.rs  mod.rs  pet_routes.rs  user_routes.rs  vet_routes.rs
dbd/uge10/: README.md
dbd/uge10/column_db/: Cargo.toml  README.md
dbd/uge10/task_2/: Cargo.toml
dbd/uge10/task_3/: Cargo.toml
dbd/uge10/task_4/: package-lock.json  package.json  tsconfig.json
dbd/uge11/edma_ffs/: Make.java  README.md
dbd/uge13/assignment_01/: README.md
dbd/uge14/dgraph_rust_test/: Cargo.toml  docker-compose.yml
dbd/uge14/dgraph_rust_test/src/: main.rs
dbd/uge16/python_neo4j/: pyproject.toml
dbd/uge16/python_neo4j/python_neo4j/: main.py
dbd/uge16/python_neo4j/tests/: test_python_neo4j.py
dbd/uge16/ts_neo4j/: docker-compose.yml  package-lock.json  package.json
dsc/uge03/: note.txt
dsc/uge03/minmax/: Cargo.toml
dsc/uge03/minmax02/: Cargo.toml
dsc/uge04/: vector_shite.7z
dsc/uge04/vector_shite/: README.md  pyproject.toml
dsc/uge05/: entertainment_garbage.txt
dsc/uge05/cosine_vector_comparison_thing/: README.md  pyproject.toml
dsc/uge05/txt_comparison/: README.md  pyproject.toml
dsc/uge07/matrix_image_processing/: README.md  pyproject.toml  requirements.txt
dsc/uge07/matrix_image_processing/matrix_image_processing/: cli.py  logic.py  main.py
dsc/uge07/matrix_image_processing/tests/: test_matrix_image_processing.py
dsc/uge09/testing_covid_hypothesis/: README.md  pyproject.toml  requirements.txt
dsc/uge12/: 2b7d43d9-E7-3-Simple-Linear-Regression.ipynb
dsc/uge12/linear_regression/: pyproject.toml  readme.md
dsc/uge13/: .README.md.kate-swp  README.md
dsc/uge13/classification/: pyproject.toml
dsc/uge13/classification/src/: bayes_examples.py  cli.py  knn.py  knn_cheramics.py  logic.py
dsc/uge13/classification/tests/: test_classification.py
dsc/uge14/unsupervised_machine_learning/: pyproject.toml
dsc/uge14/unsupervised_machine_learning/src/: cli.py  logic.py  main.py
dsc/uge16/: readme.md
dsc/uge16/clustering/: pyproject.toml
dsc/uge16/clustering/clustering/: main.py  non-implemented_garbage.py
dsc/uge16/clustering/tests/: test_clustering.py
dsc/uge16/garbage/: pyproject.toml
mal/uge01/: postgres_model_exercise.drawio  teashop.sql
mal/uge02/exercise01/: Cargo.toml
mal/uge02_more/exercise_thing/: Cargo.toml
mal/uge02_more/exercise_thing02/: Cargo.toml
mal/uge03/: stuff
mal/uge03/exercises/: Cargo.toml
ufo/extra/exam_stage1_review/: cython_insertion.c  setup.py  test.py  (+1 more)
ufo/uge01/: assignment.out  assignment.tex
ufo/uge01/steganography/: pyproject.toml
ufo/uge12/: README.md  optimization_report_thing.aux  optimization_report_thing.out  optimization_report_thing.tex  optimization_report_thing.toc
uge01/: counter-vikke.txt  opgave_def01.txt
uge01/binary_addition/: Cargo.toml
(+148 files in other folders)
