[package]
name = "dgraph_rust_test"
version = "0.1.0"
authors = ["Apathy <none-of@your.business>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.5.0", features=["fs"]}
dgraph-tonic = { version = "0.9", features = ["tls"] }
serde = { version = "1.0.125"}
