[tool.poetry]
name = "python_neo4j"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
