[tool.poetry]
name = "unsupervised_machine_learning"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7.1.2"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
