[tool.poetry]
name = "clustering"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
