[tool.poetry]
name = "redis_teaching_demo"
version = "0.1.0"
description = ""
authors = ["Mutestock <doublenegative@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
redis = "^3.5.3"
python-dotenv = "^0.17.1"
nose2 = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
